[package]
name = "annembed"
version = "0.0.2"
authors = ["jeanpierre.both@gmail.com"]
repository = "https://github.com/jean-pierreBoth/annembed"
description = "a Rust implemntation of a dimension reduction à la Umap "
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["algorithms", "ann", "embedding", "dimension-reduction", "umap"]
documentation = "https://docs.rs/annembed"
edition= "2021"


[profile.release]
lto = true
opt-level = 3

[lib]
# cargo rustc --lib -- --crate-type dylib [or staticlib] or rlib (default)
# if we want to avoid specifying in advance crate-type 
path = "src/lib.rs"
#crate-type = ["cdylib"]


[[examples]]
name = "mnist_digits"
path = "examples/mnist_digits.rs"

[[examples]]
name = "mnist_fashion"
path = "examples/mnist_fashion.rs"

#[[example]]

[dependencies]
# default is version spec is ^ meaning can update up to max non null version number
# cargo doc --no-deps avoid dependencies doc generation
#




# for //
parking_lot = "0.11"
rayon = {version = "1.5"}
num_cpus = {version = "1.8.0"}

cpu-time = {version = "1.0"}

ndarray = {version = "0.15", features=["rayon", "serde"]}
ndarray-linalg = {version = "0.14", features = ["intel-mkl-static"]}
lax = {version = "0.2"}
lapacke = {version = "0.5"}
sprs = {version = "0.11"}

clap = {version = "2.29"}
indexmap = {version = "1.6"}
# hnsw_rs =  {git = "https://gitlab.com/jpboth/hnswlib-rs.git"}
#hnsw_rs = {path = "../hnswlib-rs"}
hnsw_rs = {version = "0.1.15"}

# rand utilis
rand = {version = "0.8"}
rand_distr = {version = "0.4"}
rand_xoshiro = {version = "0.6"}
quantiles = {version = "0.7"}

num-traits = {version = "0.2"}
lazy_static = { version = "1.4"}

# for io
csv = {version = "1.1"}
serde= {version = "1.0", features = ["derive"] }
bincode = {version = "1.3"}
byteorder = {version = "1.4"}

# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
#log = { version = "0.4"}
env_logger = { version = "0.9"}


katexit = {version = "0.1.0"}

